--- a/deploy/index.html
+++ b/deploy/index.html
@@ -43,7 +43,8 @@
                     </section>
     <section>
                             <ul>
-                                <li><img src="" alt=""></li>
+                                <li><img src="img/logo.png" alt="dance logo"></li>
+                                <li><h6>©2020</h6></li>
                             </ul>
                         
                         </section>
