--- a/deploy/index.html
+++ b/deploy/index.html
@@ -12,41 +12,40 @@
 <body>
     <section>
         <h1>The Language of Dance</h1>
-        <img src="img/desktop/hero.jpg" alt="woman dancing on the desert">
+        <img src="img/section-1/hero.jpg" alt="woman dancing on the desert">
     </section>
     <section>
-            <img src="img/desktop/image1.jpeg" alt="woman wearing blue dancing on the street">
+            <img src="img/section-2/image1.jpeg" alt="woman wearing blue dancing on the street">
             <article>
                 <h2>No dancer is ‘confined’ to one love language</h2>
                 <h6>They don’t care as much about the sensuality or challenge, they want to just have fun. </h6>
             </article>
         </section>
     <section>
-                <img src="img/desktop/hero2.jpg" alt="two girls preparing to dance">
+                <img src="img/section-3/hero2.jpg" alt="two girls preparing to dance">
                 <article>
                     <h1>All the dance love languages are based on the idea of connection</h1>
                 </article>
             </section>
     <section>
                     <ul>
-                        <li><img src="img/desktop/gallery1.jpg" alt="woman ballet dancing in front of the building"></li>
-                        <li><img src="img/desktop/gallery2.jpg" alt="woman ballet dancing in front of the bridge"></li>
-                        <li><img src="img/desktop/gallery3.jpg" alt="woman dancing in long white dress"></li>
+                        <li><img src="img/section-4/gallery1.jpg" alt="woman ballet dancing in front of the building"></li>
+                        <li><img src="img/section-4/gallery2.jpg" alt="woman ballet dancing in front of the bridge"></li>
+                        <li><img src="img/section-4/gallery3.jpg" alt="woman dancing in long white dress"></li>
                     </ul>
                 
                 </section>
     <section>
-                        <img src="img/desktop/profile.png" alt="woman dancing in the dark">
+                        <img src="img/section-5/profile.png" alt="woman dancing in the dark">
                         <article>
                             <p>Deep Connection dancers want to shut out the world, and be one with their partner. What they see means little to them. What they feel means everything. They would rather go slow and simple and preserve ‘perfect connection’, than go fast or complex and momentarily lose the magic. They may like expression, playfulness, challenge, or energy – but all those pale in comparison to the perfect feeling of synchronicity.</p>
                         </article>
                     </section>
     <section>
                             <ul>
-                                <li><img src="img/logo.png" alt="dance logo"></li>
+                                <li><img src="img/footer/logo.png" alt="dance logo"></li>
                                 <li><h6>©2020</h6></li>
                             </ul>
-                        
                         </section>
 
     <!-- jQuery -->
