--- a/deploy/index.html
+++ b/deploy/index.html
@@ -17,14 +17,18 @@
     <section>
             <img src="img/section-2/image1.jpeg" alt="woman wearing blue dancing on the street">
             <article>
+                <hr />
                 <h2>No dancer is ‘confined’ to one love language</h2>
-                <h6>They don’t care as much about the sensuality or challenge, they want to just have fun. </h6>
+                <h5>They don’t care as much about the sensuality or challenge, they want to just have fun. </h5>
+                <hr />
             </article>
         </section>
     <section>
                 <img src="img/section-3/hero2.jpg" alt="two girls preparing to dance">
                 <article>
+                    <hr />
                     <h1>All the dance love languages are based on the idea of connection</h1>
+                    <hr />
                 </article>
             </section>
     <section>
@@ -43,7 +47,7 @@
                     </section>
     <section>
                             <ul>
-                                <li><img src="img/footer/logo.png" alt="dance logo"></li>
+                                <li><img src="img/footer/logo.svg" alt="dance logo"></li>
                                 <li><h6>©2020</h6></li>
                             </ul>
                         </section>
