--- a/deploy/index.html
+++ b/deploy/index.html
@@ -12,7 +12,9 @@
 <body>
     <section id="section-1">
         <img src="img/section-1/hero.jpg" alt="woman dancing on the desert">
-        <h1>The Language of Dance</h1>
+        <div id="title-container">
+            <h1 id="title">The Language of Dance</h1>
+        </div>
     </section>
     <section id="section-2">
         
@@ -63,7 +65,7 @@
                 </article>
             </section>
     <section id="section-4">
-                    <ul>
+                    <ul id="gallery">
                         <li><img src="img/section-4/gallery1.jpg" alt="woman ballet dancing in front of the building"></li>
                         <li><img src="img/section-4/gallery2.jpg" alt="woman ballet dancing in front of the bridge"></li>
                         <li><img src="img/section-4/gallery3.jpg" alt="woman dancing in long white dress"></li>
@@ -71,15 +73,17 @@
                 
                 </section>
     <section id="section-5">
-                        <img src="img/section-5/profile.png" alt="woman dancing in the dark">
-                        <article>
-                            <p>Deep Connection dancers want to shut out the world, and be one with their partner. What they see means little to them. What they feel means everything. They would rather go slow and simple and preserve ‘perfect connection’, than go fast or complex and momentarily lose the magic. They may like expression, playfulness, challenge, or energy – but all those pale in comparison to the perfect feeling of synchronicity.</p>
-                        </article>
+                        <div id="section-5-content">
+                            <img src="img/section-5/profile.png" alt="woman dancing in the dark">
+                            <article>
+                                <p>Deep Connection dancers want to shut out the world, and be one with their partner. What they see means little to them. What they feel means everything. They would rather go slow and simple and preserve ‘perfect connection’, than go fast or complex and momentarily lose the magic. They may like expression, playfulness, challenge, or energy – but all those pale in comparison to the perfect feeling of synchronicity.</p>
+                            </article>
+                        </div>
                     </section>
-    <section>
-                            <ul>
-                                <li><img src="img/footer/logo.svg" alt="dance logo"></li>
-                                <li><h6>©2020</h6></li>
+    <section id="footer">
+                            <ul id="footer-container">
+                                <li id="logo"><img src="img/footer/logo.svg" alt="dance logo"></li>
+                                <li id="date"><h6>©2020</h6></li>
                             </ul>
                         </section>
 
