ipad gallery section

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -66,9 +66,9 @@
             </section>
     <section id="section-4">
                     <ul id="gallery">
-                        <li><img src="img/section-4/gallery1.jpg" alt="woman ballet dancing in front of the building"></li>
-                        <li><img src="img/section-4/gallery2.jpg" alt="woman ballet dancing in front of the bridge"></li>
-                        <li><img src="img/section-4/gallery3.jpg" alt="woman dancing in long white dress"></li>
+                        <li id="g1"><img src="img/section-4/gallery1.jpg" alt="woman ballet dancing in front of the building"></li>
+                        <li id="g2"><img src="img/section-4/gallery2.jpg" alt="woman ballet dancing in front of the bridge"></li>
+                        <li id="g3"><img src="img/section-4/gallery3.jpg" alt="woman dancing in long white dress"></li>
                     </ul>
                 
                 </section>
