--- a/deploy/index.html
+++ b/deploy/index.html
@@ -11,9 +11,8 @@
 
 <body>
     <section id="section-1">
-        <div id="title-container">
-            <h1 id="title">The Language of Dance</h1>
-        </div>
+        <div id="section-1-hero"></div>
+        <h1 id="title">The Language of Dance</h1>
     </section>
     <section id="section-2" class="content-spacing">
         
