--- a/deploy/index.html
+++ b/deploy/index.html
@@ -63,8 +63,9 @@
                             <p id="section-5-text">Deep Connection dancers want to shut out the world, and be one with their partner. What they see means little to them. What they feel means everything. They would rather go slow and simple and preserve ‘perfect connection’, than go fast or complex and momentarily lose the magic. They may like expression, playfulness, challenge, or energy – but all those pale in comparison to the perfect feeling of synchronicity.</p>
                         </article>
                     </section>
-    <section id="footer" class="content-spacing">
-                            <ul id="footer-container">
+    <section id="footer" >
+                            <ul class="content-margin" id="footer-container">
+                                <li></li>
                                 <li id="logo"><img src="img/footer/logo.svg" alt="logo"></li>
                                 <li id="date"><h6>©2020</h6></li>
                             </ul>
