--- a/deploy/index.html
+++ b/deploy/index.html
@@ -49,7 +49,7 @@
                 </article>
             </section>
     <section id="section-4" class="content-spacing">
-                    <ul id="gallery">
+                    <ul id="gallery" class="content-margin">
                         <li id="g1"></li>
                         <li id="g2"></li>
                         <li id="g3"></li>
@@ -65,8 +65,7 @@
                     </section>
     <section id="footer" >
                             <ul class="content-margin" id="footer-container">
-                                <li></li>
-                                <li id="logo"><img src="img/footer/logo.svg" alt="logo"></li>
+                                <li id="logo"></li>
                                 <li id="date"><h6>©2020</h6></li>
                             </ul>
                         </section>
