--- a/deploy/index.html
+++ b/deploy/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/styles.css">
     <title>Week 2 Homework</title>
     <!-- GG Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;900&family=Raleway:wght@500&display=swap" rel="stylesheet">
@@ -22,14 +21,14 @@
             </section>
         
             <section id="burger-container">
-                <i id="burger" class="fas fa-hamburger"></i>
+                <i id="burger" class="fas fa-carrot"></i>
             </section>
     
             <nav id="nav-container" data-nav="main-navigation">
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#section-2">About</a></li>
+                    <li><a href="#section-3">Portfolio</a></li>
+                    <li><a href="#section-5">Contact</a></li>
                 </ul>
             </nav>
         </div>
