--- a/deploy/index.html
+++ b/deploy/index.html
@@ -21,7 +21,7 @@
             </section>
         
             <section id="burger-container">
-                <i id="burger" class="fas fa-carrot"></i>
+                <i id="burger-icon" class="fas fa-carrot"></i>
             </section>
     
             <nav id="nav-container" data-nav="main-navigation">
